# islah-app

./: .env.local  .gitignore  Architecture Frontend.mermaid  INTEGRATION_COMPLETE.md  Islah_school_MCD.mermaid  README.md  ROADMAP.md  v0-frontend-prompt.md
backend/: .gitignore  Dockerfile  README.md  alembic.ini  api.md  architecture.md  create_test_data.py  docker-compose.yml  init_db.py  package.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  server.js
backend/app/: api.py  main.py
backend/app/api/: dependencies.py  pagination.py  search.py
backend/app/api/endpoints/: academic.py  auth.py  classes.py  parents.py  payments.py  quick_search.py  registrations.py  stats.py  students.py
backend/app/database/: models.py  session.py
backend/app/routes/: attendances.py  classes.py  enrollments.py  guardians.py  notifications.py  parents.py  payments.py  students.py  users.py
backend/app/schemas/: academic.py  class_schema.py  flag.py  parent.py  payment.py  registration.py  student.py  user.py
backend/app/services/: academic_service.py  auth_service.py  class_service.py  parent_service.py  payment_service.py  registration_service.py  student_service.py
backend/db-init/: database_schema.sql
backend/src/: main.py  manage.py  models.py  run.py  schemas.py  setup_docker.py
backend/src/app/: __init__.py  api.py  entrypoint.py  main.py
backend/src/app/api/: __init__.py  app_instance.py  exception_handlers.py  middleware.py  routes_register.py  tables_setup.py
backend/src/app/api/v1/: api.py
backend/src/app/api/v1/endpoints/: attendance.py  auth.py  classroom.py  dashboard.py  grade.py  level.py  notification.py  parent.py  payment.py  student.py  subject.py  teacher.py  user.py
backend/src/app/crud/: attendance.py  auth.py  classroom.py  dashboard.py  grade.py  level.py  notification.py  parent.py  payment.py  student.py  subject.py  teacher.py  user.py
backend/src/app/models/: attendance.py  classroom.py  dashboard.py  grade.py  level.py  notification.py  parent.py  payment.py  student.py  subject.py  teacher.py  user.py
backend/src/app/routes/: __init__.py  absences.py  access_requests.py  annees_scolaires.py  attendance.py  attendances.py  auth.py  bulk_operations.py  classe_creneaux.py  classes.py  classrooms.py  configurations.py  cours.py  eleves.py  enrollments.py  grades.py  guardians.py  init.py  inscriptions.py  invoices.py  levels.py  matieres.py  messages.py  niveaux.py  notifications.py  paiements.py  parents.py  payments.py  report_cards.py  responsables.py  schedules.py  seances.py  students.py  subjects.py  teachers.py  users.py
backend/src/app/schemas/: attendance.py  auth.py  classroom.py  dashboard.py  grade.py  level.py  notification.py  parent.py  payment.py  student.py  subject.py  teacher.py  user.py
backend/src/app/schemas/shared/: classes.py
backend/src/commands/: admin.py  db.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: initial_migration.py
backend/src/scripts/: create_admin.py  create_tables.py  list_admins.py  reset_admin_password.py
backend/src/utils/: auth.py  console.py  database.py  dependencies.py  enums.py  error_handlers.py  models.py  notifications.py  pagination.py  password.py  pdf_generator.py  profile_manager.py  response_models.py  schemas.py  settings.py
backend/tests/: test_academic.py  test_auth_standalone.py  test_classes.py  test_complete_student_registration_workflow.py  test_pagination_standalone.py  test_payments.py  test_registrations.py  test_student_registration_integration.py  test_students.py
backend/utils/: models.py  schemas.py  settings.py
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.js  trash.tsx  trash.txt
frontend-prototype/: README.md  package-lock.json  package.json
frontend-prototype/app/: layout.tsx  page.tsx
frontend/app/: globals.css  layout.tsx  metadata.ts  page.tsx  role-access.tsx
frontend/components/: AnimatedTableRow.tsx  CustomInput.tsx  FeatureCard.tsx  ParentAssociation.tsx  ParentSearch.tsx  StatCard.tsx  StudentSearch.tsx  dialog.tsx  pending-application.tsx  side-nav.tsx  top-nav.tsx
frontend/hooks/: use-auth.tsx
frontend/lib/: api.ts  theme.ts
(+71 files in other folders)
